27099-exam/mydeployments/27099-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 27099-webapp-deployment
  namespace: 27099-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: 27099-webapp-deployment
        image: thirumalaivasan325/java-app1:v1
        ports:
        - containerPort: 8001
