27099-exam/mydeployments/27099-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-27099
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8001 # container port
    #nodePort: 30001  # NodePort to access the service
